--- a/Tic-tac.html
+++ b/Tic-tac.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Tic-tac.css">
-    <title>grid css</title>
+    <title>Game</title>
 </head>
 <body>
     <div class="container">
